gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-http-gateway # Name of the Gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg # Reference to the GatewayClass
  listeners:
    - name: http-app
      protocol: HTTP
      port: 80 # Port number for the listener
      allowedRoutes:
        namespaces:
          from: All
